# chip-8-emulator

./: Cargo.toml  readme.md
src/: chip8.rs  main.rs  opcode.rs
