[package]
name = "chip8emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
env_logger = "0.9"
log = "0.4"
pixels = "0.9.0"
winit = "0.27"
winit_input_helper = "0.13"
game-loop = { version = "0.10.0", features = ["winit"] }
